--- a/src/scss/app/index.scss
+++ b/src/scss/app/index.scss
@@ -1,5 +1,6 @@
 @import './mixin';
 @import '../mixins/gradients';
+@import '../mixins/vendor-prefixes';
 @import '../material-shadows/material-shadows';
 
 /*
