--- a/src/forms/input-base/input-base.component.pug
+++ b/src/forms/input-base/input-base.component.pug
@@ -1,7 +1,8 @@
 include ../../mixins/base.pug
 
 .input-group.m-b-15.w-100(
-    [class.fg-float]="floatingLabel"
+    [class.fg-float]="floatingLabel",
+    [class.fc-alt]="alt",
     [ngClass]="{ 'has-error': !control.valid && (fgd.form.submitted || control.dirty)}")
 
     label(*ngIf="label && !floatingLabel") {{label}}
