--- a/src/forms/number/number.component.pug
+++ b/src/forms/number/number.component.pug
@@ -1,8 +1,9 @@
 include ../../mixins/base.pug
 
 .input-group.m-b-15.w-100(
-    [class.fg-float]="floatingLabel"
-    style="width: 100%"
+    [class.fg-float]="floatingLabel",
+    [class.fc-alt]="alt",
+    style="width: 100%",
     [ngClass]="{ 'has-error': !control.valid && (fgd.form.submitted || control.dirty)}")
 
     label(*ngIf="label && !floatingLabel") {{label}}
