updated demo and button components to support simple button colors

--- a/demo/components/demo/user-interface/button/button.html
+++ b/demo/components/demo/user-interface/button/button.html
@@ -6,11 +6,11 @@
     </p>
 
     <div>
-        <bw-button *ngFor="let c of buttons" [icon]="c.icon" [simple]="true" [simpleColor]="c.color"></bw-button>
+        <bw-button *ngFor="let c of buttons" [icon]="c.icon" [simple]="true" [color]="c.color"></bw-button>
     </div>
 
     <div class="m-t-20">
-        <bw-button *ngFor="let c of buttons" [title]="c.title" [icon]="c.icon" [simple]="true" [simpleColor]="c.color"></bw-button>
+        <bw-button *ngFor="let c of buttons" [title]="c.title" [icon]="c.icon" [simple]="true" [color]="c.color"></bw-button>
     </div>
 
 
