I missed one error case so I added anothe css fix for validations

--- a/demo/components/demo/forms/text-box/text-box.html
+++ b/demo/components/demo/forms/text-box/text-box.html
@@ -59,7 +59,8 @@
                 field="withLeftIcon"
                 label="Icon on the left"
                 leftIcon="account-add"
-                [alt]="true">
+                [alt]="true"
+                [required]="true">
             </text-box>
         </div>
 
