updated spacing for side menu because it was too big for mobile devices

--- a/demo/components/demo/forms/text-box/text-box.html
+++ b/demo/components/demo/forms/text-box/text-box.html
@@ -71,7 +71,8 @@
                 field="withLeftIcon"
                 label="Icon on the left"
                 rightIcon="face"
-                [alt]="true">
+                [alt]="true"
+                [required]="true">
             </text-box>
         </div>
 
