added logo, logoHref an other as input parameters to the app header component

--- a/demo/app.jade
+++ b/demo/app.jade
@@ -1,6 +1,6 @@
 app-header(color="blue",
     [addMenuTrigger]="true",
-    brand="Material Components - Demo",
+    [brand]="appTitle",
     (onSidebarToggle)="open = $event",
     [actions]="headerActions")
 
