--- a/src/layout/app-header/app-header.component.pug
+++ b/src/layout/app-header/app-header.component.pug
@@ -7,13 +7,13 @@ header#header.clearfix([attr.data-current-skin]='color')
                 .line.center
                 .line.bottom
         // brand
-        li.logo.hidden-xs(*ngIf="brand")
-            a(href='index.html') {{brand}}
+        li.logo(*ngIf="brand")
+            a([href]='logoHref') {{brand}}
 
         // logo
-        li.hidden-xs(*ngIf="!brand && logo")
-            a.m-l-10(href='index.html')
-                img(src='{{logo}}')
+        li(*ngIf="!brand && logo")
+            a.m-l-10([href]='logoHref')
+                img([src]='logoPath')
 
         li.pull-right(*ngIf="actions")
             actions(color="white",
