updated demo app and remove url management at app-header component. In addition I tested the actionClicked output from app-header

--- a/demo/app.jade
+++ b/demo/app.jade
@@ -2,6 +2,7 @@ app-header(color="blue",
     [addMenuTrigger]="true",
     [brand]="appTitle",
     (onSidebarToggle)="open = $event",
+    (onActionClicked)="onActionClicked($event)",
     [actions]="headerActions")
 
 sidebar([open]="open")
